# Cove

./: .gitignore  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  index.html  package-lock.json  package.json
src/: api.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  cleanup.rs  commands.rs  lib.rs  main.rs  models.rs  paths.rs  projects_config.rs  related.rs  scan.rs  settings.rs  transcript.rs
src-tauri/src/tools/: claude.rs  mod.rs  reasonix.rs
src-tauri/tests/: archive_test.rs  cleanup_test.rs  paths_test.rs  related_test.rs  scan_test.rs
src/styles/: animations.css  icons.ts  theme.css
src/views/: archive.ts  cleanup.ts  confirm.ts  conversations.ts  loose.ts  projects.ts  session-detail.ts
